sample-apps/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: our-api
  labels:
    app: our-api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: api:latest
        imagePullPolicy: Never
