sample-apps/api/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: api
spec:
  selector:
    app: api
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8080
    nodePort: 30000
  type: NodePort
